--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,7 +12,9 @@
 		"yiisoft/yii2-jui": "~2.0.0",
 		"yiisoft/yii2-swiftmailer": "~2.0.0",
 		"vlucas/phpdotenv": "1.0.*",
-		"codemix/yii2-streamlog": "1.1.0"
+		"codemix/yii2-streamlog": "1.1.0",
+		"guzzlehttp/guzzle": "~6.0",
+		"yiisoft/yii2-httpclient": "^2.0"
 	},
 	"require-dev": {
 		"yiisoft/yii2-debug": "~2.0.0",
