--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,16 @@
     "babel-preset-react": "6.11.1",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "0.9.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
-    "file-loader": "0.9.0",
     "react-addons-test-utils": "*",
     "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
+    "style-loader": "^0.17.0",
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.14.1",
@@ -32,13 +35,16 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-preset-es2015": "6.9.0",
+    "babel-preset-stage-1": "^6.24.1",
     "babel-register": "6.11.6",
     "express": "4.14.0",
+    "lodash": "^4.17.4",
     "react": "15.3.0",
     "react-dom": "15.3.0",
     "react-redux": "^5.0.0",
     "react-router": "^2.0.1",
     "react-router-dom": "^4.0.0",
+    "react-sparklines": "^1.6.0",
     "redux": "^3.0.4",
     "redux-form": "^6.6.3",
     "redux-promise": "^0.5.3"
