- Refactor app creating a main container to get redux form work,  fixing the wrapper error: update react-hot reload,  change config of webpack and babel - Adding form functionality to the forecast_index container   forcing to the user to wait after the render is finish if the   button os clicked - Changing some css and adding bootstrap table-responsive

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,17 @@ frontend/public/build
 frontend/node_modules
 frontend/website
 
+.DS_Store
+*.log
+
+frontend/coverage
+frontend/build/server.js
+frontend/build/server.js.map
+frontend/build/public/assets
+frontend/webpack-assets.json
+frontend/webpack-stats.json
+
+
 docker-compose.yml
 *.swp
 .vimrc
