--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,13 @@
     "chai-jquery": "^2.0.0",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "0.9.0",
+    "file-loader": "^0.9.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
-    "react-addons-test-utils": "*",
+    "react-addons-test-utils": "^15.0.2",
     "react-dom": "15.3.0",
-    "react-hot-loader": "1.3.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.17.0",
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
