- Preparing frontend app for production - Setting webpack to receive env variables in running time like host and port - Changing the static url according to this params in the action creator - Setting the stack-compose.yml

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,9 +11,15 @@ backend/web/assets
 backend/vendor
 
 # react frontend
-frontend/node_modules/
-frontend/public/
+frontend/node_modules/**/*
+frontend/node_modules
+frontend/public/**/*
+frontend/public
 frontend-test
-
+frontend/website/**/*
+frontend/website
 frontend/build/public
+
+/tmp/**/*
+/tmp
 
