--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,12 +14,14 @@
 		"vlucas/phpdotenv": "1.0.*",
 		"codemix/yii2-streamlog": "1.1.0",
 		"guzzlehttp/guzzle": "~6.0",
-		"yiisoft/yii2-httpclient": "^2.0"
+		"yiisoft/yii2-httpclient": "^2.0",
+		"codeception/codeception": "2.1.*",
+		"codeception/specify": "*",
+		"codeception/verify": "*"
 	},
 	"require-dev": {
 		"yiisoft/yii2-debug": "~2.0.0",
 		"yiisoft/yii2-gii": "~2.0.0",
-		"yiisoft/yii2-codeception": "~2.0.0",
 		"yiisoft/yii2-faker": "~2.0.0"
 	},
 	"config": {
