--- a/backend/tests/codeception/functional.suite.yml
+++ b/backend/tests/codeception/functional.suite.yml
@@ -11,6 +11,9 @@ modules:
     enabled:
       - Filesystem
       - Yii2
+      - REST
     config:
         Yii2:
             configFile: 'codeception/config/functional.php'
+        REST:
+          url: 'http://127.0.0.1:8081/v1'
