- Preparing app to enzyme test with mocha, chai - Updating jsdom and some package for test - Adding actions, reducers and component test - Adding data test files and helper files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node index.js",
     "start": "NODE_ENV=production node index.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test": "mocha --compilers js:babel-core/register -r jsdom-global/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Base Marco Lehmann <m99coder@gmail.com> (http://m99.io/)",
@@ -18,16 +18,23 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.11.1",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
     "chai-jquery": "^2.0.0",
     "css-loader": "^0.28.1",
+    "expect-enzyme": "^0.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
+    "jsdom": "10.0.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^2.4.5",
-    "react-addons-test-utils": "^15.0.2",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "15.3.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-test-renderer": "^15.5.4",
+    "redux-mock-store": "^1.2.3",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
     "style-loader": "^0.17.0",
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
@@ -41,8 +48,9 @@
     "babel-register": "6.11.6",
     "express": "4.14.0",
     "lodash": "^4.17.4",
-    "react": "15.3.0",
-    "react-dom": "15.3.0",
+    "prop-types": "^15.5.10",
+    "react": "15.5.0",
+    "react-dom": "15.5.0",
     "react-redux": "^5.0.0",
     "react-router": "^2.0.1",
     "react-router-dom": "^4.0.0",
